[package]
name = "yeats"
version = "0.1.0"
authors = ["Tom Watson <tom.watson@kinesis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.9.0-rc.1"
tokio = { version = "^0.2.22", features = ["time"] }
log = "^0.4.11"
itertools = "^0.9.0"
