[package]
name = "yeats"
version = "0.1.0"
authors = ["Tom Watson <tom.watson@kinesis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.10.8"
tokio = { version = "^1.9.0", features = ["time", "rt-multi-thread"] }
log = "^0.4.11"
simple_logger = "^1.1.0"
itertools = "^0.10.1"
rand = "^0.8.4"
async-trait = "^0.1.51"
